# industrial_robotics_simulation_platform

./: .flake8  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  create_setup_cfgs.sh  industrial_deployment_guide.md  mypy.ini  requirements.txt
.github/workflows/: ci.yml
data/: README.md
docs/: benchmarking_guide.md  collision_checker_usage.md  experiment_runner.md  full_system_run_guide.md  performance_guide.md  realsense_camera_guide.md  robot_integration_guide.md  scenario_templates.md  testing_guide.md  ui_customization.md
docs/api/: Makefile
docs/api/source/: conf.py  index.rst
industrial_robotics_simulation_platform_meta/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.sh
log/: latest_build
models/: README.md
notebooks/: benchmark_perception_demo.ipynb
scripts/: benchmark_perception.py  benchmark_planning.py  run_experiment.py  run_sim.py  setup_and_test.sh  visualize_trajectory.py
src/advanced_perception/: README.md  package.xml  setup.py
src/advanced_perception/advanced_perception/: __init__.py  pose_estimation_node.py  segmentation_node.py
src/advanced_perception/config/: segmentation_config.yaml
src/advanced_perception/launch/: advanced_perception_launch.py
src/apm_core/: README.md  package.xml  setup.cfg  setup.py
src/apm_core/apm_core/: __init__.py  (+3 more)
src/apm_msgs/: CMakeLists.txt  README.md  package.xml
src/apm_msgs/msg/: DetectedObjectArray.msg  Detection2DArray.msg  RobotStatus.msg
src/delta_robot_description/: CMakeLists.txt  README.md  package.xml
src/delta_robot_description/launch/: display.launch.py  display_headless.launch.py
src/delta_robot_description/meshes/: cylinder.stl
src/delta_robot_description/urdf/: delta_robot.urdf.xacro
src/delta_robot_moveit_config/: CMakeLists.txt  README.md  package.xml
src/fmm_core/: README.md  package.xml  setup.cfg  setup.py
src/fmm_core/config/: default_sorting_config.yaml
src/fmm_core/fmm_core/: __init__.py  fmm_moveit_interface_node.py  pick_and_place_node.py  planning_scene_updater_node.py  sorting_demo_node.py
src/fmm_core/launch/: fmm_moveit_system_launch.py  load_sorting_config_launch.py  pick_and_place_launch.py  sorting_demo_launch.py
src/fmm_core/resource/: fmm_core
src/industrial_protocols/: README.md  package.xml  setup.cfg  setup.py
src/industrial_protocols/industrial_protocols/: __init__.py  industrial_protocol_bridge_node.py
src/industrial_protocols/resource/: industrial_protocols
src/perception_nodes/: README.md  package.xml  setup.py
src/perception_nodes/perception_nodes/: __init__.py  synthetic_camera_node.py
src/perception_nodes/resource/: perception_nodes
src/robot_interfaces/: README.md  package.xml  setup.py
src/robot_interfaces/robot_interfaces/: __init__.py
src/robot_interfaces/robot_interfaces/delta_interface/: __init__.py
src/robot_interfaces/robot_interfaces/ur5_interface/: __init__.py
src/simulation_core/: README.md  package.xml  setup.cfg  setup.py
src/simulation_core/config/: create_default_config.py  default_camera_config.yaml  delta_robot_sorting.yaml  pick_and_place.yaml  quality_inspection.yaml  safety_rules.yaml  sdf_example.yaml
src/simulation_core/launch/: full_system.launch.py
src/simulation_core/resource/: simulation_core
src/simulation_core/simulation_core/: __init__.py  collision_checker.py  environment_configurator_node.py  registry.py  robot_control_node.py  safety_monitor_node.py  system_test_node.py
src/simulation_tools/: README.md  package.xml  setup.cfg  setup.py
src/simulation_tools/config/: create_default_config.py  realsense_config.yaml
src/simulation_tools/launch/: integrated_system_launch.py  realsense_hybrid_launch.py  visualization_launch.py
src/simulation_tools/simulation_tools/: __init__.py  action_logger.py  camera_simulator_node.py  environment_configurator_node.py  industrial_protocol_bridge_node.py  object_3d_viewer_node.py  pick_place_action_server.py  safety_monitor_lifecycle_node.py  safety_monitor_node.py  system_test_node.py  visualization_server_node.py  web_interface_node.py
src/simulation_tools/static/: main.js  style.css
src/simulation_tools/templates/: base.html  control.html  dashboard.html
src/ur5_robot_description/: CMakeLists.txt  README.md  package.xml
src/ur5_robot_description/config/: ur5.rviz
src/ur5_robot_description/launch/: display.launch.py
src/ur5_robot_description/urdf/: ur5_robot.urdf.xacro
src/ur5_robot_moveit_config/: CMakeLists.txt  README.md  package.xml
src/web_interface/: setup.py
src/web_interface_backend/: README.md  package.xml  setup.cfg  setup.py
src/web_interface_backend/resource/: web_interface_backend
src/web_interface_backend/web_interface_backend/: __init__.py  action_logger.py  visualization_server_node.py  web_interface_node.py
src/web_interface_frontend/: README.md  package.xml  setup.cfg  setup.py
src/web_interface_frontend/resource/: web_interface_frontend
src/web_interface_frontend/static/: editor.js  style.css
src/web_interface_frontend/templates/: base.html  control.html  dashboard.html  editor.html  index.html  log.html  login.html
src/web_interface_frontend/web_interface_frontend/: __init__.py
templates/robot_description/: template_robot.sdf  template_robot.srdf  template_robot.urdf.xacro
tests/: test_camera_simulator_node.py  test_collision_checker.py  test_core_logic.py  test_environment_configurator_commands.py  test_environment_configurator_shutdown.py  test_fmm_core_nodes.py  test_launch_files.py  test_lifecycle_and_action.py  test_nodes.py  test_pick_and_place_node_trajectory.py  test_pose_estimation_node_fallback.py  test_pose_estimation_node_module.py  test_registry.py  test_robot_control_node.py  test_robot_interfaces.py  test_safety_monitor_node.py  test_segmentation_node_module.py  test_system_test_node.py  test_utils.py  test_visualization_server_node.py  test_web_interface_api.py  test_web_interface_load_users.py  test_web_interface_runserver.py
tools/profiling/: profile_perception.py  profile_simulation.py  profiling_utils.py
(+253 files in other folders)
