<?xml version="1.0"?>
<package format="3">
  <name>industrial_protocols</name>
  <version>0.1.0</version>
  <description>Industrial OPC UA and MQTT communication</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>python3-yaml</depend>
  <depend>asyncua</depend>
  <depend>paho-mqtt</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
