<?xml version="1.0"?>
<package format="3">
  <name>web_interface_frontend</name>
  <version>0.2.0</version>
  <description>Web interface frontend resources</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
